--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessing object properties</title>
-    <script src="script.js" defer></script>
+    <title>Classes</title>
+    <script type="module" src="Backpack.js"></script>
+    <script type="module" src="script.js"></script>
   </head>
   <body></body>
 </html>
