--- a/Functions/index.html
+++ b/Functions/index.html
@@ -6,5 +6,9 @@
     <title>Console demo</title>
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+      <main>
+          
+      </main>
+  </body>
 </html>
