Add exercise files

--- a/Functions/01_function and methods/index.html
+++ b/Functions/01_function and methods/index.html
@@ -6,9 +6,5 @@
     <title>Console demo</title>
     <script src="script.js" defer></script>
   </head>
-  <body>
-      <main>
-          
-      </main>
-  </body>
+  <body></body>
 </html>
